--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
   url_launcher: ^6.1.9
   pdf: ^3.9.0
- 
-
+  path_provider: ^2.0.12
+  path_provider_android: ^2.0.22
+  pdf_viewer_plugin: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
