--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.18.0
+  intl: ^0.17.0
   url_launcher: ^6.1.9
   pdf: ^3.9.0
   path_provider: ^2.0.12
   path_provider_android: ^2.0.22
   pdf_viewer_plugin: ^2.0.1
+  firebase_auth: ^3.1.0
+  http: ^0.13.0
+  firebase_core: ^1.4.0
+  firebase_core_platform_interface: 4.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.12.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
